# tablepro-linuxclone

./: CLAUDE.md  main.py  pyproject.toml  tablefree.spec
.github/workflows/: build-packages.yml
docs/: phase-01-sidebar-schema-browser.md  phase-02-sql-editor.md  phase-03-data-grid.md  phase-04-table-structure.md  phase-05-inline-editing.md  phase-06-filtering.md  phase-07-import-export.md  phase-08-query-history.md  phase-09-tab-persistence.md  phase-10-keyboard-shortcuts-polish.md  phase-11-ssh-tunnel-profiles.md
packaging/deb/: control  tablefree.desktop
resources/styles/: dark.qss  light.qss  template.qss
scripts/: build_deb.sh  build_pkg.sh
tablefree/: __init__.py  app.py  main_window.py  resource_path.py  theme.py
tablefree/db/: __init__.py  connection_store.py  driver.py  manager.py  mysql_driver.py  postgres_driver.py  ssh_config.py  ssh_store.py  ssh_tunnel_manager.py
tablefree/models/: __init__.py  change_tracker.py  query_result.py
tablefree/services/: __init__.py  exporter.py  importer.py  query_history.py  schema_cache.py
tablefree/widgets/: __init__.py  code_editor.py  completer.py  connection_dialog.py  editor.py  export_dialog.py  filter_panel.py  history_panel.py  import_dialog.py  result_view.py  sidebar.py  (+4 more)
tests/: conftest.py  test_change_tracker.py  test_completer.py  test_connection_store.py  test_editor.py  test_exporter.py  test_filter_panel.py  test_history_panel.py  test_importer.py  test_main_window.py  test_query_history.py  test_query_worker.py  test_sql_highlighter.py  test_ssh_store.py  test_ssh_tunnel_manager.py
(+2 files in other folders)
